<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_nama"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tv_nim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_nim"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tv_fakultas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_fakultas"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tv_prodi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_prodi"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tv_konsentrasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_konsentrasi"
            android:textSize="16sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>